@@ -37,3 +37,4 @@ RandomContact 2.0.46[Nov 2013]
 RandomContact 2.0.50[Nov 2013]
  -	Better layout for landscape layout
  -	Improved graphics
+ -	Retain contact info on screen rotation
